crates/ty_server/tests/e2e/snapshots/e2e__refactors__refactoring_edit_is_sent_to_a_client_that_cannot_resolve.snap
---
source: crates/ty_server/tests/e2e/refactors.rs
expression: action.edit
---
{
  "changes": {
    "file://<temp_dir>/src/main.py": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 11
          },
          "end": {
            "line": 2,
            "character": 12
          }
        },
        "newText": "compute()"
      },
      {
        "range": {
          "start": {
            "line": 1,
            "character": 0
          },
          "end": {
            "line": 2,
            "character": 0
          }
        },
        "newText": ""
      }
    ]
  }
}
