crates/ty_server/tests/e2e/snapshots/e2e__refactors__refused_refactoring_is_disabled_only_when_invoked.snap
---
source: crates/ty_server/tests/e2e/refactors.rs
expression: invoked
---
[
  {
    "title": "Inline variable `x`",
    "kind": "refactor.inline.variable",
    "disabled": {
      "reason": "a read of `x` may see another value, or none"
    }
  }
]
